button on mobile fix

--- a/css/common-forms.less
+++ b/css/common-forms.less
@@ -44,8 +44,6 @@
 
 	@media only screen and (max-width : 460px) {
 		padding: 0 1.2em;
-		font-size: bkscale(@font-swatch7-font-size, 0.75);
-		line-height: (@font-swatch7-font-size * 2);
 	} 
 
 	&:hover {
